--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@
 ##########################################################
 
 # data directory for application, ~ prefix means user home
-bookstoredemo.dataDir = ~/microstream-bookstoredemo
+bookstoredemo.dataDir = /tmp/microstream-bookstoredemo
 
 # amount of randomly generated data, supported values: minimal, small, medium, large, humongous
+#bookstoredemo.initialDataAmount = medium
 bookstoredemo.initialDataAmount = medium
 
 # strategy to migrate the MicroStream data to the JPA database, batch_insert or sql_file
@@ -17,19 +18,25 @@ bookstoredemo.jpaDataMigrationStrategy = batch_insert
 ## Tomcat
 ##########################################################
 
-server.port = 80
+server.port = 8080
 
 
 ##########################################################
 ## JPA
 ##########################################################
 
-spring.datasource.driverClassName = org.postgresql.Driver
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driverClassName = org.postgresql.Driver
+#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/bookstoredemo
-spring.datasource.username = postgres
-spring.datasource.password = postgres
+#spring.datasource.url = jdbc:postgresql://localhost:5432/bookstoredemo
+spring.datasource.url=jdbc:h2:mem:bookstoredemo;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+#spring.datasource.username = postgres
+#spring.datasource.password = postgres
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.open-in-view = false
 
